[gd_scene load_steps=6 format=3 uid="uid://ci4wvydmoi36i"]

[ext_resource type="Texture2D" uid="uid://b1cearv71tdk" path="res://assets/sprites/kenney_pico-8-platformer/transparent/tilemap/tilemap_packed.png" id="1_hpvv5"]
[ext_resource type="Script" uid="uid://cwts4udsgaj4q" path="res://scripts/door.gd" id="1_uvdjg"]
[ext_resource type="Texture2D" uid="uid://csjcdrsty3xm4" path="res://assets/sprites/kenney_pico-8-platformer/transparent/tiles/tile_0067.png" id="3_83dcw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83dcw"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvdjg"]
size = Vector2(8, 8)

[node name="Door" type="Area2D"]
script = ExtResource("1_uvdjg")

[node name="Closed" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_hpvv5")
region_enabled = true
region_rect = Rect2(88, 48, 16, 16)
region_filter_clip_enabled = true

[node name="Open" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -8)
texture = ExtResource("1_hpvv5")
region_enabled = true
region_rect = Rect2(104, 48, 16, 16)
region_filter_clip_enabled = true

[node name="CollisionShapeClosed" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_83dcw")

[node name="CollisionShapeOpen" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_uvdjg")
disabled = true

[node name="Lock" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -24)
texture = ExtResource("3_83dcw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
